[BIB] new ref for HETCA

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -12,6 +12,19 @@
 	year = "2000"
 }
 
+@article{laland2016anintroductiontonicheconstructiontheory,
+	abstract = "Niche construction refers to the modification of selective environments by organisms. Theoretical and empirical studies of niche construction are increasing in importance as foci in evolutionary ecology. This special edition presents theoretical and empirical research that illustrates the significance of niche construction to the field. Here we set the scene for the following papers by (1) discussing the history of niche construction research, (2) providing clear definitions that distinguish niche construction from related concepts such as ecosystem engineering and the extended phenotype, (3) providing a brief summary of the findings of niche construction research, (4) discussing the contribution of niche construction and ecological inheritance to (a) expanded notions of inheritance, and (b) the extended evolutionary synthesis, and (5) briefly touching on some of the issues that underlie the controversies over niche construction.",
+	author = "Laland, Kevin and Matthews, Blake and Feldman, Marcus W.",
+	doi = "10.1007/s10682-016-9821-z",
+	issn = "1573-8477",
+	journal = "Evolutionary Ecology",
+	localfile = "../pdfs/laland2016anintroductiontonicheconstructiontheory.pdf",
+	pages = "1--12",
+	title = "{An introduction to niche construction theory}",
+	url = "http://dx.doi.org/10.1007/s10682-016-9821-z",
+	year = "2016"
+}
+
 @book{vives2001oligopoly,
 	author = "Vives, Xavier",
 	publisher = "MIT press",
@@ -1315,7 +1328,7 @@
 	doi = "10.1073/pnas.0610172104",
 	eprint = "http://www.pnas.org/content/104/17/7301.full.pdf",
 	journal = "Proceedings of the National Academy of Sciences",
-	localfile = "../pdfs/bettencourt2007growthinnovationscalingandthepaceoflifeincities.pdfs",
+	localfile = "../pdfs/bettencourt2007growthinnovationscalingandthepaceoflifeincities.pdf",
 	number = "17",
 	pages = "7301--7306",
 	title = "{Growth, innovation, scaling, and the pace of life in cities}",
@@ -1346,5 +1359,52 @@
 	title = "{Introduction to Simulating the Past}",
 	url = "http://dx.doi.org/10.1007/s10816-014-9209-8",
 	volume = "21"
+}
+
+@inproceedings{bredeche2012environmentdrivenopenende,
+	abstract = "{This paper summarizes work done since 2009 on running swarm of autonomous robots with Environment-driven Dis- tributed Evolutionary Adaptation algorithms (EDEA). The motivation behind this work is to design algorithms that can cope with unknown environmental pressure, that is to learn (through evolution) efficient survival strategies in order to ad- dress a priori unknown constraints existing in the environ- ment. We are concerned with a fixed-size population of au- tonomous robotic agents facing unknown, possibly changing, environments, which may require the robots to evolve partic- ular behaviors such as cooperative behaviors, specialized be- haviors, etc. We describe a particular flavor of EDEA, termed minimal EDEA (mEDEA), and summarize results obtained so far, both with real robots and in simulation. This algo- rithm is shown to be both efficient in unknown environment and robust with respect to abrupt, unpredicted, and possibly lethal changes in the environment. Moreover, the ability of mEDEA to evolve various types of behavior, including coop- erative and specialized behaviors, is summarized.}",
+	address = "East Lansing, {\'E}tats-Unis",
+	affiliation = "Laboratoire de Recherche en Informatique - LRI , TAO - INRIA Saclay - Ile de France",
+	audience = "internationale",
+	author = "Bred{\`e}che, Nicolas and Montanier, Jean-Marc",
+	booktitle = "{Evolving Physical Systems Workshop}",
+	hal_id = "hal-00731422",
+	language = "Anglais",
+	pdf = "http://hal.inria.fr/hal-00731422/PDF/2012-EPS-EDEA.pdf",
+	title = "{Environment-driven Open-ended Evolution with a Population of Autonomous Robots}",
+	url = "http://hal.inria.fr/hal-00731422",
+	year = "2012"
+}
+
+@article{heard2014transgenerationalepigeneticinheritancemythsandmechanisms,
+	abstract = "Since the human genome was sequenced, the term ``epigenetics'' is increasingly being associated with the hope that we are more than just the sum of our genes. Might what we eat, the air we breathe, or even the emotions we feel influence not only our genes but those of descendants? The environment can certainly influence gene expression and can lead to disease, but transgenerational consequences are another matter. Although the inheritance of epigenetic characters can certainly occur---particularly in plants---how much is due to the environment and the extent to which it happens in humans remain unclear.",
+	author = "Heard, Edith and Martienssen, Robert A.",
+	doi = "10.1016/j.cell.2014.02.045",
+	issn = "0092-8674",
+	journal = "Cell",
+	localfile = "../pdfs/heard2014transgenerationalepigeneticinheritancemythsandmechanisms.pdf",
+	number = "1",
+	pages = "95--109",
+	title = "{Transgenerational Epigenetic Inheritance: Myths and Mechanisms}",
+	url = "http://www.sciencedirect.com/science/article/pii/S0092867414002864",
+	volume = "157",
+	year = "2014"
+}
+
+@article{batty2008thesizescaleandshapeofcities,
+	abstract = "Despite a century of effort, our understanding of how cities evolve is still woefully inadequate. Recent research, however, suggests that cities are complex systems that mainly grow from the bottom up, their size and shape following well-defined scaling laws that result from intense competition for space. An integrated theory of how cities evolve, linking urban economics and transportation behavior to developments in network science, allometric growth, and fractal geometry, is being slowly developed. This science provides new insights into the resource limits facing cities in terms of the meaning of density, compactness, and sprawl, and related questions of sustainability. It has the potential to enrich current approaches to city planning and replace traditional top-down strategies with realistic city plans that benefit all city dwellers.",
+	author = "Batty, Michael",
+	doi = "10.1126/science.1151419",
+	eprint = "http://science.sciencemag.org/content/319/5864/769.full.pdf",
+	issn = "0036-8075",
+	journal = "Science",
+	localfile = "../pdfs/batty2008thesizescaleandshapeofcities.pdf",
+	number = "5864",
+	pages = "769--771",
+	publisher = "American Association for the Advancement of Science",
+	title = "{The Size, Scale, and Shape of Cities}",
+	url = "http://science.sciencemag.org/content/319/5864/769",
+	volume = "319",
+	year = "2008"
 }
 
