--- a/doc/cours/workshop/20160201_DACAS1/abstract.tex
+++ b/doc/cours/workshop/20160201_DACAS1/abstract.tex
@@ -24,16 +24,15 @@ Major cultural transition \& the evolution of urban scaling.
 \maketitle
 
 \section*{Abstract}
-Scaling properties are one of most the striking regularities found in Nature. It has been decades then, that biologists have observed that size of organisms is correlated with the rate of their metabolism, their speed and other  physiological measurement~\citep{bonner2011size}. Since, such relation has been widely studied. But more recently, people started to observe similar regularities in human cities. A certain number of studies have shown that the size of cities is scaling in correlation with a wide range of socio-economical measure, such as the communication speed inside the cities, the unemployment rate, in similar way than physiological properties scales with mass of organisms~\citep{batty2008thesizescaleandshapeofcities,bettencourt2007growthinnovationscalingandthepaceoflifeincities}. 
-But some concerns have been raised, that doing the parallel between cities and biological organisms is not feasible. The physical limits of second are easy to define and it allows us to have precise physiological measure. The limits of cities are far more difficult to draw and that should prevent us to make any assumption on the scaling properties observed. 
+Scaling properties are one of most striking regularities found in Nature. It has been decades then, that biologists have observed that the size of organisms is correlated with the rate of their metabolism, their speed and other  physiological measurement~\citep{bonner2011size}. Since, such relation has been widely studied. But more recently, people started to observe similar regularities in human cities and a certain number of studies have shown that the size of cities is scaling in correlation with a wide range of socio-economical measures, such as the communication speed inside the cities, the unemployment rate and so on, in the same way than how physiological properties scales with mass of organisms~\citep{batty2008thesizescaleandshapeofcities,bettencourt2007growthinnovationscalingandthepaceoflifeincities}. 
+But some concerns have been raised, that doing the parallel between cities and biological organisms is not feasible. The physical limits of biological organisms are easy to define and it allows us to have precise physiological measure. The limits of cities are far more difficult to draw and that should prevent us to make any assumption on their scaling properties. 
 
-We argue that such critics apply also to evolutionary biology. If it seems easy to define what an individual is when one look at the organisms traditionally studied in evolutionary biology (bacterias, mice, human or bees), it is not so clear for an important part of other entities in the living world (the famous example of super-organism such as the quaking aspen and its 1000 trees that are only clones of one ``individual'' is one among others, cf \cite{bouchard2011darwinismwithoutpopulationsamoreinclusiveunderstandingofsotf}). Indeed, more recent work on a widest range of different biological reigns have shown that scaling properties \emph{are} different \citep{delong2010shiftsinmetabolicscalingproductionandefficiencyacrossmajorevolutionarytransitionsoflife} and that could underline the major evolutionary transitions as described for example by \cite{maynardsmith1997major}. This strongly suggest that if one want to integrate the studies of cities into an evolutionary framework, one as to go farther than a too restrictive Darwinian position and think in broader approaches (cf \cite{godfrey2009darwinian} or \cite{jablonka2014evolution} among other). 
+We argue that such critics apply also to evolutionary biology. If it seems easy to define what an individual is when one look at the organisms traditionally studied in evolutionary biology (bacterias, mice, human or bees), it is not so clear for an important part of other entities in the living world (the famous example of the quaking aspen and its 1000 trees that are only clones of one ``individual'', is one among others, cf \cite{bouchard2011darwinismwithoutpopulationsamoreinclusiveunderstandingofsotf}). Indeed, more recent work on organisms coming from different biological reigns have shown that the scaling properties of those different organisms \emph{are} different \citep{delong2010shiftsinmetabolicscalingproductionandefficiencyacrossmajorevolutionarytransitionsoflife}. This difference suggest that the scaling properties underline the major evolutionary transitions as described for example by \cite{maynardsmith1997major}. In turn it shows that if one want to integrate the studies of cities into an evolutionary framework, one as to go farther than a too restrictive Darwinian position and work with broader approaches that encompass wider types of evolutionary mechanisms acting on wider kind of individuals (as proposed for instance by : \cite{godfrey2009darwinian} or \cite{jablonka2014evolution}). 
+
+On the other hand, \cite{hou2010energeticbasisofcoloniallivinginsocialinsects} have shown that one can detect some properties of economy of scale coming from social interaction in ant colonies. Simply said, they show that some scaling properties observed when the size of a colony grow seem to be possible thanks to the social interaction involved inside the colony. This nicely support the idea that using scaling effects to study socio-cultural systems is fruitful and that it can help us to understand the socio-economic relations and properties governing such system. At the same time it raises the question of why and how such properties emerge in those system. This could gives us new way to work on the question of the level of selection in biology~\citep{okasha2006evolution}.
 
 
-Moreover, other studies have shown that one can already detect some properties of economy of scale arising from social interaction at the level of ant colonies~\citep{hou2010energeticbasisofcoloniallivinginsocialinsects}. Those finding nicely support the idea that using scaling effects to study socio-cultural systems is fruitful and at the same time raise the question of the evolutionary reason of the emergence of such properties in such system. This could also shed new light on the question of the level of selection in biology~\citep{okasha2006evolution} and how we can study it.
-
-
-In this article we follow this path and push forward the ideas already explored by \cite{ortman2014theprehistoryofurbanscaling}, that if one can studies dynamics of nowadays cities using there scaling properties, one shooed be ``able to infer aggregate socio-economic properties of ancient societies from archaeological measures of settlement organization. '' We propose here that the study of correlation properties in cities from past societies could help us: (1) to characterize the economical and cultural dynamics that have allowed the emergence of such properties in the studied socketed and (2) gives us a framework to study the evolution of such properties across the ages and between different human societies. Does human societies has evolved following similar major transition than the ones encountered during evolution of life? What such cultural transition can learn us about the level at which evolution and selection are acting?  In this paper we propose approaches and methods build upon the case study of cities during the Roman Empire to bring new  arguments in those kind of studies and try to answer such questions.
+In this article we follow this path and push forward the idea that \cite{ortman2014theprehistoryofurbanscaling} are starting to explore : if one can study dynamics of nowadays cities using there scaling properties, one should be ``able to infer aggregate socio-economic properties of ancient societies from archaeological measures of settlement organization''. We propose here that the study of the correlation between socio-economic properties and size of cities from past societies could help us: (1) to characterize the economical and cultural dynamics that have allowed the emergence of such properties in the studied society and (2) gives us a framework to study the evolution of such properties across the ages and between different human societies. Does human societies have evolved following similar major transitions than the ones life faced during its evolution? What such cultural transition can learn us about the level at which evolution and selection are acting?  In this paper we propose approaches and methods build on the case study of cities of the Roman Empire to bring new arguments in those kind of studies and try to answer such questions.
 
 
 \bibliographystyle{apalike}
