some notes and images to be included in paper jm and nico

--- a/doc/conferences/20160329_CAA/presentation.tex
+++ b/doc/conferences/20160329_CAA/presentation.tex
@@ -43,9 +43,9 @@
 \makeatother
 
 \title{
-	Computer Applications and Quantitative Methods in Archaeology Conference :\\
 	Co-evolution of trade and culture:\\
-	Impact of cultural network topology on economic dynamics
+	Impact of cultural network topology on economic dynamics.\\
+	CAA2016
 }
 
 \institute{8th December 2016}
