[MEDEA] Data analysis

--- a/dev/medeaNetwork/frontiers2015/resum.tex
+++ b/dev/medeaNetwork/frontiers2015/resum.tex
@@ -12,16 +12,16 @@
 
 \begin{figure}
     \begin{tabular}[H]{lcccc}
+	\includegraphics[width=.25\textwidth]{img/100/agentwrtK_D-0020.pdf} &
+	\includegraphics[width=.25\textwidth]{img/100/agentwrtK_D-0060.pdf} &
+	\includegraphics[width=.25\textwidth]{img/100/agentwrtK_D-0100.pdf} &
+	\includegraphics[width=.25\textwidth]{img/100/agentwrtK_D-1000.pdf} \\
 	\includegraphics[width=.25\textwidth]{img/500/agentwrtK_D-0004.pdf} &
 	\includegraphics[width=.25\textwidth]{img/500/agentwrtK_D-0010.pdf} &
 	\includegraphics[width=.25\textwidth]{img/500/agentwrtK_D-0100.pdf} &
 	\includegraphics[width=.25\textwidth]{img/500/agentwrtK_D-1000.pdf} \\
-	\includegraphics[width=.25\textwidth]{img/100/agentwrtK_D-0020.pdf} &
-	\includegraphics[width=.25\textwidth]{img/100/agentwrtK_D-0060.pdf} &
-	\includegraphics[width=.25\textwidth]{img/100/agentwrtK_D-0100.pdf} &
-    %\includegraphics[width=.25\textwidth]{img/100/agentwrtK_D-1000.png} \\
     \end{tabular}
-    \caption{Number of agent alive at the end of the simulation for different tournament size and differents density. First line show result for simulation with 500 agents, second line for simu with 100 agents (warnings: on the second line, the size of the tournaments not the same and it miss the result for density = 1)}
+    \caption{Number of agent alive at the end of the simulation for different tournament size and differents density. First line show result for simulation with 100 agents, second line for simu with 500 agents }
 \end{figure}
 
 \pagebreak
@@ -46,11 +46,14 @@ Donc l'idée ici ce serait de mixer les deux lignes, mais ce n'est pas si simple
 \end{figure}
 \begin{figure}
     \begin{tabular}[H]{ccc}
-	\includegraphics[height=4cm]{img/agentwrtD-REP50.pdf} &
-	\includegraphics[height=4cm]{img/agentwrtD-REP75.pdf} &
-	\includegraphics[height=4cm]{img/agentwrtD-REP90.pdf} \\
+	\includegraphics[height=4cm]{img/100/agentwrtD-REP50.pdf} &
+	\includegraphics[height=4cm]{img/100/agentwrtD-REP75.pdf} &
+	\includegraphics[height=4cm]{img/100/agentwrtD-REP90.pdf} \\
+	\includegraphics[height=4cm]{img/500/agentwrtD-REP50.pdf} &
+	\includegraphics[height=4cm]{img/500/agentwrtD-REP75.pdf} &
+	\includegraphics[height=4cm]{img/500/agentwrtD-REP90.pdf} \\
     \end{tabular}
-    \caption{Number of agent alive at the end of the simulation for different densities and differents repartition of ressources (miss the value for $popsize=500$. Mêmes graphes que la figure precedante mais en les affichant simplement avec des violin plot et pour seulement quelques densités. L'idée serait d'ici avoir aussi les resultats pour 500. Ils manquent pour le moment. }
+    \caption{Number of agent alive at the end of the simulation for different densities and differents repartition of ressources. Mêmes graphes que la figure precedante mais en les affichant simplement avec des violin plot et pour seulement quelques densités.}
     \label{table:violin}
 \end{figure}
 
